app/assets/stylesheets/solicitations/index.sass
@import template-data-gouv-main

@import ../environment_ribbon

// template overrides
.nav__item a#experts_login
  color: var(--theme-dark-text)
  border: 1px solid var(--theme-dark-text)

.hero__container
  min-height: 0px
  h1.hero__title
    font-size: 1.7em

.hero
  background: linear-gradient(45deg, #0053b3, #006be6)
  background: linear-gradient(45deg,var(--theme-primary), var(--theme-primary-light))
  .hero__container
    background: image-url('marianne-cover.svg') no-repeat
    background-size: auto 100%

section.section
  padding: 4em 0

span.navbar__domain
  white-space: nowrap // for IE11

//  landings index and show

section.section#featured-landings
  background: linear-gradient(45deg, #0053b3, #006be6)
  background: linear-gradient(45deg,var(--theme-primary), var(--theme-primary-light))
  a:hover
    background: transparent
  .row + .row
    margin-top: 1.5em
    margin-top: var(--space-m)
  .card
    display: flex
    flex-direction: column
    .card__content
      padding: 1em
    .discover_button
      margin-top: auto
      padding: 0 1em 1em
    a
      .landing-auto-description-container // unused for now
        .landing-title
          margin-bottom: 2em
        .landing-description
          margin: 0
          display: none
        &:hover
          .landing-title
            display: none
          .landing-description
            display: block
      text-decoration: none
      color: #0053b3
      color: var(--theme-primary)
      &:hover
        color: #00234d
        color: var(--theme-primary-dark)
        .landing-description
          text-decoration: underline

.step, .landing-topic
  display: flex
  flex-direction: column
  flex: 1
  h5
    margin-top: 0.5em
    margin-bottom: 0
  h3
    color: #006be6
    img
      vertical-align: middle

.logo-list
  width: 95%
  margin: 0 auto
  text-align: center
  img
    max-height: 70px
    max-width: 140px
    margin: 8px
    vertical-align: middle

.section#stats
  padding: 2em

.stats__item
  font-size: 1.2em

  .count
    margin-right: 0.2em
    font-size: 1.6em
    vertical-align: text-top

.section#testimonials
  q
    font-style: italic
    quotes: "« " " »" "“" "”"
  .article__author
    padding: 0
  .row + .row
    margin-top: 1.5em
    margin-top: var(--space-m)
  .row .card
    max-width: 100%


.grid#stats-charts
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr))

// IE fixes

@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none)
  img[src*=".svg"]
    width: 100%

